# ci-docker-images

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml  tox.ini
.gitlab/: renovate.json
.gitlab/ci/stages/: build.yml  build_and_push.yml  code_quality.yml  globals.yml  pull.yml  sast.yml
Dockerfiles/: pyenv-python-3.7.9-3.8.6-3.9.0-poetry  pyenv-python-3.7.9-3.8.6-3.9.0-poetry-hadolint-go-1.15.5  pyenv-python-3.7.9-3.8.6-3.9.0-poetry-hadolint-go-1.15.5.Dockerfile  pyenv-python-3.7.9-3.8.6-3.9.0-poetry.Dockerfile  pyenv-python-3.7.9-3.8.6-3.9.4-poetry-hadolint-go-1.15.5.Dockerfile  pyenv-python-3.7.9-3.8.6-3.9.4-poetry-hadolint-go-1.16.3.Dockerfile  pyenv-python-3.7.9-3.8.6-3.9.4-poetry.Dockerfile
