[tool.poetry]
name = "CI Docker Images"
version = "0.1.0"
description = "Containerized base environments for Python project CI pipelines."
authors = ["Teo Zosa <teo@sonosim.com>"]
readme = "README.md"
repository = "https://github.com/TeoZosa/ci-docker-images"
homepage = "https://github.com/TeoZosa/ci-docker-images"
keywords = ["AI", "CI", "CD"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
tox = "^3.20"
# Linting & formatting orchestrator
pre-commit = "^2.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
